test/functions/intents/out/out-varargs.good
out-varargs.chpl:1: error: out intent varargs are not supported
